# anyDrop

./: .cz-config.cjs  .cz-config.js  .editorconfig  .eslintrc  .gitignore  LICENSE  README.md  commitlint.config.js  lint-config.js  package.json  pnpm-lock.yaml  vite.config.ts
rope/src/: lib.rs  main.rs
src/: App copy.tsx  App.css  App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/mdns-sd/src/: service_daemon.rs
src-tauri/src/: client_command.rs  client_config.rs  client_connector.rs  client_event.rs  client_global.rs  client_send_recevier.rs  client_transfer.rs  common_command.rs  discovery.rs  global.rs  global_constants.rs  lib copy.rs  lib.rs  main.rs  mdns.rs  send.rs  send.rsssss  test.txt  utils.rs
src-tauri/src/discovery/: utils.rs
src/components/icons/: clear.tsx  delete.tsx  down.tsx  file.tsx  floder.tsx  index.tsx  logo.tsx  paste.tsx  pending.tsx  reject.tsx  sender.tsx
src/hooks/: index.ts  useDiscoverDevices.ts  useNotes.ts  useRecevierInfos.ts  useSenderInfos.ts  useTheme.ts
src/layouts/: default.scss  default.tsx
src/model/: index.ts
src/store/: device.ts  index.ts  recevierFile.ts  sendFile.ts
src/styles/: index.scss
src/types/: index.ts
src/utils/: config.ts  enum.ts  file.tsx  index.ts  index.tsx  string.ts
src/views/find/: DeviceList.scss  DeviceList.tsx  fileList.scss  fileList.tsx  index.scss  index.tsx  types.d.ts
src/views/home/: ConfigForm.tsx  index.tsx
src/views/setting/: ConfigForm.tsx
src/views/transfer/: index.tsx  recever.tsx  sender.scss  sender.tsx
(+13 files in other folders)
