[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.7", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-alpha.11", features = [] }
if-addrs = "0.10"                                      # get local IP addresses
log = { version = "0.4", optional = true }             # logging
window-shadows = "0.2.1"
tauri-plugin-window = "2.0.0-alpha"
tauri-plugin-fs = "2.0.0-alpha"
local_ipaddress = "0.1.3"
mdns = "3.0.0"
mdns-sd = { path = "./mdns-sd" }
tokio = { version = "1.32.0", features = ["full", "rt-multi-thread", "net"] }
anyhow = "1.0.75"
names = "0.14.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tauri-plugin-os = "2.0.0-alpha"
tauri-plugin-dialog = "2.0.0-alpha"
rfd = "0.11.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

